[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "crossing"
version = "0.1.0"
description = "Detect silent information loss at system boundaries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Friday", email = "friday@fridayops.xyz"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["testing", "serialization", "data-loss", "boundaries", "fuzzing"]

[project.urls]
Homepage = "https://fridayops.xyz"
Repository = "https://github.com/Fridayai700/crossing"

[tool.setuptools]
py-modules = ["crossing"]
