[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crossing"
version = "1.5.0"
description = "Detect silent information loss at system boundaries — semantic exception analysis and round-trip data loss fuzzing for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Friday", email = "friday@fridayops.xyz"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["testing", "exceptions", "semantic-analysis", "data-loss", "boundaries", "fuzzing", "information-theory", "ast"]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
toml = ["tomli_w>=1.0", "tomli>=2.0; python_version < '3.11'"]
all = ["pyyaml>=6.0", "tomli_w>=1.0", "tomli>=2.0; python_version < '3.11'"]

[project.urls]
Homepage = "https://fridayops.xyz"
Repository = "https://github.com/worksbyfriday/crossing"
Issues = "https://github.com/worksbyfriday/crossing/issues"
Documentation = "https://fridayops.xyz/crossing/"

[project.scripts]
crossing = "crossing:cli"
crossing-scan = "scan:main"
crossing-semantic = "semantic_scan:main"

[tool.setuptools]
py-modules = ["crossing", "scan", "semantic_scan", "report"]

[tool.pytest.ini_options]
testpaths = ["test_crossing.py"]
